Fixed bugs, re-arraged landscape layout and added explanations
Made message "NaN" (when users type in equation that cannot be solved) clickable just like the default displays,
fix the bug of users can press same operations right after each other (aka made the 2nd press of the same operation print nothing),
re-arranged the landscape layout and made its contents have the exactly same size as vertical layout,
added some explanations to functions.

--- a/Assign1/app/src/main/res/values/strings.xml
+++ b/Assign1/app/src/main/res/values/strings.xml
@@ -24,7 +24,7 @@
     <string name="plusMinus">+/-</string>
     <string name="Brackets">( )</string>
 
-    <string name="Display">Click to start</string>
+    <string name="Display">Double click to start</string>
 
     <string name="History">History: \n\n\n\n\n\n\n\n\n</string>
 
